tests/fixtures/invalid/pow_list_int_none.py
# Cannot call pow() with List[int], Int, None
x = pow([1, 2, 3], 1, None)
